kube1_5/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontback
spec:
  selector:
    service: frontback
  ports:
    - protocol: TCP
      name: nginx
      port: 9001
      targetPort: 80    
    - protocol: TCP
      name: multitool
      port: 9002
      targetPort: 1180
