kube1_5/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: mynetology.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontback
            port:
              number: 9001
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: frontback
            port:
              number: 9002
